# python/apollo_openapi/apis/tags/user_management_api.py
@@ -11,13 +11,15 @@
 from apollo_openapi.paths.openapi_v1_users_enabled.put import ChangeUserEnabled
 from apollo_openapi.paths.openapi_v1_users.post import CreateOrUpdateUser
 from apollo_openapi.paths.openapi_v1_user.get import GetCurrentUser
+from apollo_openapi.paths.openapi_v1_users_user_id.get import GetUserByUserId
 from apollo_openapi.paths.openapi_v1_users.get import SearchUsers
 
 
-class PortalUserManagementApi(
+class UserManagementApi(
     ChangeUserEnabled,
     CreateOrUpdateUser,
     GetCurrentUser,
+    GetUserByUserId,
     SearchUsers,
 ):
     """NOTE: This class is auto generated by OpenAPI Generator
