# rust/src/models/mod.rs
@@ -16,6 +16,10 @@ pub mod open_cluster_dto;
 pub use self::open_cluster_dto::OpenClusterDto;
 pub mod open_cluster_namespace_role_user_dto;
 pub use self::open_cluster_namespace_role_user_dto::OpenClusterNamespaceRoleUserDto;
+pub mod open_consumer_create_request_dto;
+pub use self::open_consumer_create_request_dto::OpenConsumerCreateRequestDto;
+pub mod open_consumer_info_dto;
+pub use self::open_consumer_info_dto::OpenConsumerInfoDto;
 pub mod open_create_app_dto;
 pub use self::open_create_app_dto::OpenCreateAppDto;
 pub mod open_create_namespace_dto;
