# spring-boot2/src/main/java/com/apollo/openapi/server/api/PortalManagementApiController.java
@@ -1,5 +1,7 @@
 package com.apollo.openapi.server.api;
 
+import com.apollo.openapi.server.model.OpenConsumerCreateRequestDTO;
+import com.apollo.openapi.server.model.OpenConsumerInfoDTO;
 
 
 import org.springframework.beans.factory.annotation.Autowired;
